Books logic updated